# reaper

./: .gitlab-ci.yml  Dockerfile  README.md  development.md  pyproject.toml  tox.ini
.github/workflows/: docker-build.yml  push.yml  schedule-reap-aws-dev.yml  schedule-reap-aws-stage-prod.yml  schedule-reap-azure.yml  schedule-reap-dev.yml  schedule-reap-stage-prod.yml  schedule.yml
reaper/: __init__.py  aws_delete.py  azure_power_off_vms.py
tests/: test_aws_delete.py  test_azure_power_off_vms.py
